[project]
name = "ink-server" 
description = "ink-server" 
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.7"
license = {file = "LICENSE.md"}
dependencies = [
  "llama2@git+ssh://git@github.kcl.ac.uk/hi/llama2.git"
]
[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
[tool.setuptools]
package-data = {"inkserver" = ["py.typed"]}
[tool.pytest.ini_options]
pythonpath = ["src"]